--- a/pom.xml
+++ b/pom.xml
@@ -37,9 +37,13 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.example.models</groupId>
 			<artifactId>models</artifactId>
-			<version>2.1.5</version>
+			<version>2.2.1</version>
 		</dependency>
 	</dependencies>
 	<dependencyManagement>
