--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,18 @@
 		<dependency>
 			<groupId>org.example.models</groupId>
 			<artifactId>models</artifactId>
-			<version>2.2.1</version>
+			<version>2.2.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+			<version>3.2.3</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.mysql/mysql-connector-j -->
+		<dependency>
+			<groupId>com.mysql</groupId>
+			<artifactId>mysql-connector-j</artifactId>
+			<version>8.3.0</version>
 		</dependency>
 	</dependencies>
 	<dependencyManagement>
