--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,9 @@ spring.mail.password=pvou nwrw jfnj mdru
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.main.allow-bean-definition-overriding=true
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+##spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+
+## DataBase
+spring.datasource.url=jdbc:mysql://localhost:3306/library
+spring.datasource.username=springstudent
+spring.datasource.password=springstudent
